cabal-version: 1.22
name: RomanRpn
version: 1.0
license: AllRightsReserved
stability: experimental
x-ghc-framework-version: 8.6.4-13.14-2
x-last-ide-version: HfM1.7.0
build-type: Simple

executable RomanRpn
    main-is: Main.hs
    other-modules:
        RpnEval
        Roman
    default-language: Haskell2010
    build-depends:
        base -any
